--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -1,6 +1,4 @@
 // the ~ allows you to reference things in node_modules
 @import "~bootstrap/scss/bootstrap";
 
-body {
-    background-color: lightgray;
-}
+@import 'global.scss';
