--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -15,6 +15,11 @@
     </head>
     <body>
         {% include 'components/_navbar.html.twig' %}
+        {% for category, messages in app.flashes %}
+            {% for message in messages %}
+                <div class="alert alert-{{ category }}" role="alert">{{ message }}</div>
+            {% endfor %}
+        {% endfor %}
         {% block body %}{% endblock %}
     </body>
 </html>
