--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -3,15 +3,25 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-    <h1>Register</h1>
-
-    {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
+    <div class="container login">
+        <h1 class="text-center">Inscris-toi ici !</h1>
+        {{ form_start(registrationForm) }}
+        {{ form_row(registrationForm.email, {
+            label: 'E-mail'
+        }) }}
+        {{ form_row(registrationForm.pseudo) }}
         {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+            label: 'Mot de Passe'
         }) }}
         {{ form_row(registrationForm.agreeTerms) }}
 
-        <button type="submit" class="btn">Register</button>
-    {{ form_end(registrationForm) }}
+        <div class="row d-flex justify-content-center">
+            <button type="submit" class="btn">Valider l'inscription</button>
+            {{ form_end(registrationForm) }}
+        </div>
+    </div>
+
+
+
+
 {% endblock %}
