cart maker feature done !

--- a/assets/styles/global.scss
+++ b/assets/styles/global.scss
@@ -12,6 +12,8 @@ h1{
 
 button {
   font-family: 'Bebas Neue', cursive;
+  color: white;
+  font-size: 2em;
   background: rgb(255,163,163);
   background: linear-gradient(0deg, rgba(255,163,163,1) 0%, rgba(243,172,89,1) 100%);
 }
