--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -14,9 +14,21 @@
                     <a class="nav-link active" aria-current="page" href="{{ path('recipe_add') }}">Ajouter recette</a>
                 </li>
                 {% endif %}
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('app_login') }}">Se Connecter</a>
-                </li>
+                {% if app.user %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ path('cart_index') }}">Mon Caddie</a>
+                    </li>
+                {% endif %}
+                {% if app.user %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ path('app_logout') }}">Déconnexion</a>
+                    </li>
+                {% else %}
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="{{ path('app_login') }}">Se Connecter</a>
+                    </li>
+                {% endif %}
+
 
             </ul>
         </div>
