feature add a picture to a recipe : OK !

--- a/templates/recipe/add.html.twig
+++ b/templates/recipe/add.html.twig
@@ -16,6 +16,7 @@
         {{ form_row(form.name, {
             label: 'Nom de la recette'
         }) }}
+        {{ form_row(form.picture) }}
         {{ form_row(form.guest, {
             label: 'Nombre de convive'
         }) }}
