--- a/templates/cart/index.html.twig
+++ b/templates/cart/index.html.twig
@@ -12,9 +12,12 @@
                 <p class="ingredient"> {{ ingredient[0] }} {% if ingredient[1] %} quantité : {{  ingredient[1] }} {% endif %}</p>
             {% endfor %}
         {% endfor %}
+        <a href="{{ path('cart_close', {cart: cart.id}) }}"><button>Clôturer ma liste de course</button></a>
         {% else %}
-        <h2> Il n'y a rien dans votre caddie </h2>
+        <h3> Il n'y a rien dans votre liste de course </h3>
     {% endif %}
+
+
 
 </div>
 {% endblock %}
