--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -16,7 +16,7 @@
                 {% endif %}
                 {% if app.user %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ path('cart_index') }}">Mon Caddie</a>
+                        <a class="nav-link active" aria-current="page" href="{{ path('cart_index') }}">Liste de course</a>
                     </li>
                 {% endif %}
                 {% if app.user %}
