--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -5,13 +5,34 @@
 {% block body %}
 
     <h1>Liste des recettes de l'application</h1>
-    <ul>
+
+    <div class="container">
+
         {% for recipe in recipes %}
-            <li><a href="{{ path('recipe_show', {recipe: recipe.id}) }}">{{ recipe.name }}</a> </li>
+            <a href="{{ path('recipe_show', {recipe: recipe.id}) }}">
+                <div class="card" style="width: 25rem;">
+                    <img src="{{ asset('uploads/' ~ recipe.namePicture) }}" class="card-img-top" alt="image de la recette {{ recipe.name }}">
+                    <div class="card-body">
+                        <p class="card-title text-center"><strong>{{ recipe.name }}</strong></p>
+                        <div class="row">
+                            <div class="col-4">
+                                <p class="card-title">{{ recipe.time }} m</p>
+                            </div>
+                            <div class="col-4">
+                                <p class="card-title">{{ recipe.difficulty.name }}</p>
+                            </div>
+                            <div class="col-4">
+                                <p class="card-title">{{ recipe.cost.name }}</p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </a>
+
         {% else %}
-            <li> Aucune recette ajoutée à l'application </li>
+            Aucune recette ajoutée à l'application
         {% endfor %}
 
-    </ul>
-</div>
+    </div>
+
 {% endblock %}
