--- a/templates/recipe/show.html.twig
+++ b/templates/recipe/show.html.twig
@@ -4,10 +4,14 @@
 
 {% block body %}
 
-    <div class="container">
+    <div class="container show">
         <div class="row">
             <h1>Recette : {{ recipe.name }}</h1>
-            <div class="d-flex justify-content-center">
+            <div class="row d-flex justify-content-center">
+                <img src="{{ asset('uploads/' ~ recipe.namePicture) }}" alt="image de la recette {{ recipe.name }}">
+            </div>
+
+            <div class="d-flex justify-content-center button-add ">
             {% if app.user %}
                 <a href="{{ path('cart_add', {recipe: recipe.id}) }}"><button> Ajouter la recette à mon caddie ! </button></a>
             {% endif %}
