add admin feature and fixtures for the demo

--- a/templates/components/_navbar.html.twig
+++ b/templates/components/_navbar.html.twig
@@ -7,25 +7,30 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav d-flex justify-content-evenly w-100">
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('home') }}">Home</a>
+                    <a class="nav-link {{ app.request.attributes.get('_route') == 'home' ? 'active' : '' }}" aria-current="page" href="{{ path('home') }}">Home</a>
                 </li>
                 {% if app.user %}
                 <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="{{ path('recipe_add') }}">Ajouter recette</a>
+                    <a class="nav-link {{ app.request.attributes.get('_route') == 'recipe_add' ? 'active' : '' }}" aria-current="page" href="{{ path('recipe_add') }}">Ajouter recette</a>
                 </li>
                 {% endif %}
                 {% if app.user %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ path('cart_index') }}">Liste de course</a>
+                        <a class="nav-link {{ app.request.attributes.get('_route') == 'cart_index' ? 'active' : '' }}" aria-current="page" href="{{ path('cart_index') }}">Liste de course</a>
+                    </li>
+                {% endif %}
+                {% if is_granted("ROLE_ADMIN") %}
+                    <li class="nav-item">
+                        <a class="nav-link {{ app.request.attributes.get('_route') == 'admin_index' ? 'active' : '' }}" href="{{ path('admin_index') }}">Administration</a>
                     </li>
                 {% endif %}
                 {% if app.user %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ path('app_logout') }}">Déconnexion</a>
+                        <a class="nav-link {{ app.request.attributes.get('_route') == 'app_logout' ? 'active' : '' }}" aria-current="page" href="{{ path('app_logout') }}">Déconnexion</a>
                     </li>
                 {% else %}
                     <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{{ path('app_login') }}">Se Connecter</a>
+                        <a class="nav-link {{ app.request.attributes.get('_route') == 'app_login' ? 'active' : '' }}" aria-current="page" href="{{ path('app_login') }}">Se Connecter</a>
                     </li>
                 {% endif %}
 
