--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,30 +8,34 @@
 
     <div class="container">
 
-        {% for recipe in recipes %}
-            <a href="{{ path('recipe_show', {recipe: recipe.id}) }}">
-                <div class="card" style="width: 25rem;">
-                    <img src="{{ asset('uploads/' ~ recipe.namePicture) }}" class="card-img-top" alt="image de la recette {{ recipe.name }}">
-                    <div class="card-body">
-                        <p class="card-title text-center"><strong>{{ recipe.name }}</strong></p>
-                        <div class="row">
-                            <div class="col-4">
-                                <p class="card-title">{{ recipe.time }} m</p>
-                            </div>
-                            <div class="col-4">
-                                <p class="card-title">{{ recipe.difficulty.name }}</p>
-                            </div>
-                            <div class="col-4">
-                                <p class="card-title">{{ recipe.cost.name }}</p>
+        <div class="row">
+            {% for recipe in recipes %}
+                <div class="col-lg-4 col-12">
+                    <a href="{{ path('recipe_show', {recipe: recipe.id}) }}">
+                        <div class="card" style="width: 25rem;">
+                            <img src="{{ asset('uploads/' ~ recipe.namePicture) }}" class="card-img-top" alt="image de la recette {{ recipe.name }}">
+                            <div class="card-body">
+                                <p class="card-title text-center"><strong>{{ recipe.name }}</strong></p>
+                                <div class="row">
+                                    <div class="col-4">
+                                        <p class="card-title">{{ recipe.time }} m</p>
+                                    </div>
+                                    <div class="col-4">
+                                        <p class="card-title">{{ recipe.difficulty.name }}</p>
+                                    </div>
+                                    <div class="col-4">
+                                        <p class="card-title">{{ recipe.cost.name }}</p>
+                                    </div>
+                                </div>
                             </div>
                         </div>
-                    </div>
+                    </a>
                 </div>
-            </a>
+            {% else %}
+                Aucune recette ajoutée à l'application
+            {% endfor %}
+        </div>
 
-        {% else %}
-            Aucune recette ajoutée à l'application
-        {% endfor %}
 
     </div>
 
