--- a/templates/recipe/show.html.twig
+++ b/templates/recipe/show.html.twig
@@ -36,7 +36,7 @@
         </ul>
 
         {% if app.user == recipe.owner %}
-            <a href="{{ path('recipe_edit', {recipe: recipe.id}) }}"><button>Editer ma recette</button></a>
+            <a href="{{ path('recipe_edit', {slug: recipe.slug}) }}"><button>Editer ma recette</button></a>
         {% endif %}
 
     </div>
