--- a/templates/admin/index.html.twig
+++ b/templates/admin/index.html.twig
@@ -11,7 +11,7 @@
             <a href="{{ path('admin_recipes') }}"><button> Gérer les recettes </button></a>
         </div>
         <div class="col-6">
-            <button> Voir les statistiques </button>
+            <a href="{{ path('admin_stat') }}"><button> Voir les statistiques </button></a>
         </div>
 
     </div>
